--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
               run: python3-virtualenv/bin/pip install -r requirements.txt
 
             - name: Run Tests
-              run: ./run_test.sh
+              run: sh ./run_test.sh
